--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -1,15 +1,15 @@
 html {
   box-sizing: border-box;
-  background-color: #46b8da;
+}
+body {
+  background-color: #46b8da !important;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-body {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  max-width: 30em;
-  padding: 2em;
-  margin: 0 auto;
-  text-align: center;
+
+.content {
   background-color: #FFF;
   border-radius: 5px;
   box-shadow: 10px 10px 50px grey;
