--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,13 @@
 html {
   box-sizing: border-box;
   background-color: #46b8da;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  max-width: 30em;
-  padding: 2em;
-  margin: 0 auto;
   text-align: center;
+}
+
+.content {
   background-color: #FFF;
   border-radius: 5px;
   box-shadow: 10px 10px 50px grey;
