--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -13,4 +13,31 @@ body {
   background-color: #FFF;
   border-radius: 5px;
   box-shadow: 10px 10px 50px grey;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
+
+.streamers .row {
+  padding-top: 20px;
+  border-bottom: 1px solid grey;
+}
+
+.streamers p {
+  /*position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 10px;*/
+}
+
+/*.streamers .row {
+    display: table;
+}
+
+.streamers [class*="col-"] {
+    float: none;
+    display: table-cell;
+    vertical-align: top;
+}*/
