--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -25,6 +25,7 @@ body {
 @media only screen and (min-width : 768px) {
     .is-table-row {
         display: table;
+        width: 100%;
     }
     .is-table-row .is-table-col {
         float: none;
